# aula_18_aovivo

./: README.md  exemplo_00.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: main.py
include/: controller.py
src/: controller.py  db.py  models_sql_model.py  pokemon.db
