[tool.poetry]
name = "aula-18-aovivo"
version = "0.1.0"
description = ""
authors = ["luciano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.28"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
