[tool.poetry]
name = "aula-18-aovivo"
version = "0.1.0"
description = ""
authors = ["luciano"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.31.0"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
apache-airflow = "^2.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
